# eda-ja

./: .gitignore  pyproject.toml  setup.ctg
resources/stop_words/: ja.txt
src/: main.py
src/eda_ja/: eda.py  file_utils.py
tests/: test_eda_ja.py
tests/eda_ja/: test_eda_en.py  test_eda_ja.py
